# InfOCF

./: .cursorignore  .gitattributes  .gitignore  .pre-commit-config.yaml  FEATURES_FUNCTIONALITIES_LIST.md  LICENSE  MIGRATION_PLAN.md  README.md  birds_state.json  consistency_examples.py  core-env-uv.nix  core-env.nix  cvec_playground.py  flake.nix  mkdocs.yml  mypy_errors_full.txt  nvim-config.nix  pyproject.toml  requirements.txt  run_c_revision_birds_custom.py  show.py  show_minimal.py  show_preocf.py  show_preocf_minimal.py  strong_generator.py  test_correctness.py  weakly_generator.py
.benchmarks/Windows-CPython-3.11-64bit/: 0001_baseline.json  0002_baseline.json
.github/workflows/: auto-tag.yml  ci.yml  gh-pages.yml  release.yml  update-docs-version.yml
benchmarks/: benchmark_conditional.py  benchmark_consistency_sat.py  benchmark_incremental_c_revision.py  benchmark_lazy_rank_c_revision.py  benchmark_optimizer.py  benchmark_system_w.py  benchmark_test_syntax_splitting.py
docs/: CL_SYNTAX.md  INSTALL.md  api.md  documentation.md  index.md  show.py
docs/api/: inference.md  infocf.md  parser.md  preocf.md
docs/guides/: c_revision_overview.md  facts_and_diagnostics.md  formulas_and_acceptance.md  preocf_basics.md  quickstart.md
examples/: .example2_graph.txt.swp  example_testing.csv
examples/484_inference_relations_representatives/: 484_inference_relations_representatives_query.cl  484_kb100_query.cl  kb1.cl  kb10.cl  kb100.cl  kb101.cl  kb102.cl  kb103.cl  kb104.cl  kb105.cl  kb106.cl  kb107.cl  kb108.cl  kb109.cl  kb11.cl  kb110.cl  kb111.cl  kb112.cl  kb113.cl  kb114.cl  kb115.cl  kb116.cl  kb117.cl  kb118.cl  kb119.cl  kb12.cl  kb120.cl  kb121.cl  kb122.cl  kb123.cl  kb124.cl  kb125.cl  kb126.cl  kb127.cl  kb128.cl  kb129.cl  kb13.cl  kb130.cl  kb131.cl  kb132.cl  (+446 more)
examples/AO_Beispiele_Konditionale_KBs/: README.txt
examples/birds/: example1.cl  kb_birds001.cl  kb_birds002.cl  kb_birds003.cl  kb_birds004.cl  kb_birds005.cl  kb_birds006.cl  kb_birds007.cl  kb_birds008.cl  kb_birds009.cl  kb_birds010.cl  kb_dk_001.cl  kb_dk_inconsistent_001.cl  query_birds001.cl  query_example1.cl  query_example2.cl
examples/random_large/: randomQueries_100_100_0.cl  randomQueries_100_100_11.clq  randomQueries_100_100_12.clq  randomQueries_100_100_13.cl  randomQueries_100_100_14.clq  randomQueries_100_100_15.clq  randomQueries_100_100_16.clq  randomQueries_100_100_17.cl  randomQueries_100_100_18.clq  randomQueries_100_100_19.clq  randomQueries_100_100_20.clq  randomQueries_100_100_21.clq  randomQueries_100_100_22.clq  (+5019 more)
extinf/: ezp.py  lexinf.py  weak_p_entailment.py  weak_z_rank.py  weakcz3_imp.py  weaklexinf.py  weakly_system_z_rank.py  z3tools.py
inference/: belief_base.py  c_inference.py  c_revision.py  c_revision_model.py  conditional.py  conditional_z3.py  consistency_diagnostics.py  consistency_sat.py  deadline.py  epistemic_state.py  ezp.py  inference.py  inference_manager.py  inference_operator.py  lex_inf.py  lex_inf_z3.py  optimizer.py  p_entailment.py  preocf.py  queries.py  system_w.py  system_w_z3.py  system_z.py  tseitin_transformation.py  weak_c_inference.py  weak_c_naive.py  weak_c_z3.py  weakcz3_imp.py  weakly_system_z_rank.py  z3tools.py
infocf/: __init__.py  cli.py  log_setup.py
output/: README.md  birds_preocf_complete.pkl  cinf_sum_longest_queries.csv  experiment_metadata.json  folks_longest_cqueries.csv  pytest_large_multi.lo  show_minimal_results.csv
parser/: CKB.g4  CKB.interp  CKBLexer.interp  CKBLexer.py  CKBLexer.tokens  CKBParser.g4  CKBParser.py  CKBVisitor.py  Wrappers.py  __init__.py  genParser.sh  myVisitor.py
scripts/: calculate_p_entailment.py  calculate_pareto_front.py  calculate_pareto_front_ocfs.py  calculate_z_partition.py  check_types.sh  run_c_revision_birds_custom.py  show.py  show_minimal.py  show_preocf.py  test_pareto_front_comparison.py
sum_bench/: randomQueries_100_100_1.cl  randomQueries_100_100_10.cl  randomQueries_100_100_2.cl  randomQueries_100_100_23.cl  randomQueries_100_100_24.cl  randomQueries_100_100_31.cl  randomQueries_100_100_34.cl  randomQueries_100_100_35.cl  randomQueries_100_100_36.cl  randomQueries_100_100_37.cl  randomQueries_100_100_38.cl  randomQueries_100_100_39.cl  randomQueries_100_100_4.cl  randomQueries_100_100_40.cl  randomQueries_100_100_41.cl  randomQueries_100_100_46.cl  randomQueries_100_100_47.cl  randomQueries_100_100_5.cl  randomQueries_100_100_50.cl  randomQueries_100_100_53.cl  randomQueries_100_100_55.cl  randomQueries_100_100_56.cl  randomQueries_100_100_57.cl  randomQueries_100_100_6.cl  randomQueries_100_100_61.cl  randomQueries_100_100_62.cl  randomQueries_100_100_64.cl  randomQueries_100_100_65.cl  randomQueries_100_100_69.cl  randomQueries_100_100_72.cl  randomQueries_100_100_75.cl  randomQueries_100_100_8.cl  randomQueries_100_100_80.cl  randomQueries_100_100_83.cl  randomQueries_100_100_85.cl  randomQueries_100_100_92.cl  randomQueries_100_100_94.cl  randomQueries_100_100_95.cl  randomQueries_100_100_96.cl  randomQueries_100_120_1.cl  (+1328 more)
synsplit/: split.py
unittests/: .emptyckb.cl.swp  calculate_results.py  emptyckb.cl  example_testing.csv  example_testing_results.csv  example_testing_results_small.csv  lexinf_tests.py  make_small_correctness_csv.py  mock.py  notoriousEdgecase.cl  schmierblatt.py  schmierblatt2.py  schmierblatt3.py  simpleCKB.cl  simpleQueries.cl  syntaxerrorckb.cl  test_c_revision_fixed_gamma.py  test_c_revision_incremental.py  test_c_revision_vs_c_representation.py  test_compile_alt.py  test_compile_comparison.py  test_compile_content_comparison.py  test_compile_function.py  test_conditional_edge_cases.py  test_consistency_diagnostics.py  test_consistency_sat_edge_cases.py  test_consistency_weakly.py  test_correctness.py  test_deadline.py  test_inference_base.py  test_lex_inf_full_coverage.py  test_lex_inf_z3_edge_cases.py  test_manual_weakly_edge_cases.py  test_manual_weakly_inference.py  test_optimizer_edge_cases.py  test_preocf.py  test_preocf_additional.py  test_queries.py  test_revision_splitting_mr.py  test_syntax_splitting.py  (+6 more)
(+55 files in other folders)
